# EmccUnittest

./: .gitignore  CMakeLists.txt  Readme.md
src/MyLib/: CMakeLists.txt  Mylib.cpp  Mylib.hpp
test/: CMakeLists.txt  TestMyLib.cpp
